# tree-sitter-matlab

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .mailmap  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  build.zig  build.zig.zon  flake.nix  fuzzy.sh  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: cargo.yml  release.yml  wheels.yml
bindings/c/: tree-sitter-matlab.pc.in
bindings/go/: binding.go  binding_test.go  go.mod  go.sum
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_matlab/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterMatlab/: matlab.h
bindings/swift/TreeSitterMatlabTests/: TreeSitterMatlabTests.swift
bindings/zig/: root.zig
queries/: context.scm  emacs-highlights.scm  emacs-textobjects.scm  folds.scm  highlights.scm  indents.scm  locals.scm  tags.scm  textobjects.scm
queries/emacs/: highlights.scm
queries/helix/: highlights.scm
queries/neovim/: highlights.scm
script/: parse-examples
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: assignment.txt  boolean.txt  call.txt  cell.txt  class.txt  comments.txt  expressions.txt  extras.txt  for.txt  function.txt  if.txt  indexing.txt  keywords.txt  lambda.txt  matrix.txt  numbers.txt  range.txt  spmd.txt  strings.txt  struct.txt  switch.txt  try.txt  while.txt
