[package]
name = "tree-sitter-matlab"
description = "MATLAB grammar for the tree-sitter parsing library"
version = "1.0.2"
keywords = ["incremental", "parsing", "MATLAB"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-matlab"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.10"

[build-dependencies]
cc = "1.0"
