[package]
name = "tree-sitter-matlab"
description = "MATLAB tree-sitter parser"
version = "1.0.10"
authors = ["Álan Crístoffer e Sousa"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "matlab"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/acristoffers/tree-sitter-matlab"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.3"
